test/bad/stream2.prog
//wrong type of print output

stream main
input state output print = 0 initial print = 0
